Producing consumer